# pykitops

./: .bumpversion.cfg  404.html  CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  MAINTAINERS.md  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test.py  test_dicts.py  test_kitfile.py  test_kwargs.py  test_stub.py  yaml_output.json
.github/: dependabot.yml
.github/workflows/: add-to-project.yml  build-deploy-all.yml  pr_builds.yml  sync-docs-to-kitops.yml
before-you-begin/: index.html
config/: package.json
docs/: before-you-begin.md  index.md  mlflow.md  reference.md
docs/reference/: index.md  kit.md  kitfile.md  manager.md  reference.md  user.md
how-to-guides/: index.html
kitops/: __init__.py  kitfile.py
modelkit/: __init__.py  base_validators.py  code.py  code_validator.py  datasets.py  datasets_validator.py  dict_list_section_validator.py  dict_list_validator.py  dict_section.py  dict_section_validator.py  docs.py  errors.py  kitfile.py  kitfile_bak.py  kitfile_section.py  list_section.py  manifest_version.py  manifest_version_validator.py  model.py  model_parts.py  modelkit_types.py  package.py  package_alt.py  package_section_validator.py  restricted_dict.py  string_section.py  string_section_validator.py  string_validator.py  test.py  utils.py  validator.py
reference/: index.html
requirements/: base.in  base.txt  ci.in  ci.txt  development.in  development.txt  publish.txt
tests/: conftest.py  test.py  test_kitfile.py  test_kitfile_output.py  test_utils.py
(+37 files in other folders)
